--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -6,15 +6,15 @@
     
     <div class="container">
         <div class="row">
-            <div class="col-3 pt-2">
+            <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 pt-2">
                 <p>2010 hasta 2014</p>
             </div>
-            <div class="col-8 pt-2">
+            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 pt-2">
                 <h5 class="colorOrg">Universidad Nacional de Catamarca</h5>
                 <h6 class="center">Avda. Belgrano al 300 - San Fernando del Valle de Catamarca, Argentina</h6>
                 <p><strong>Título:</strong> Profesor Universitario en Computación</p>
             </div>
-            <div class="col-1 pt-2">
+            <div class="col-xs-12 col-sm-1 col-md-1 col-lg-1 pt-2">
                 <!-- Button trigger modal - Boton para abrir formulario Educacion -->
                 <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalEducacion">
                     <i class="fa-solid fa-pen-to-square fa-xl"></i>
@@ -25,15 +25,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-3 pt-2">
+            <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 pt-2">
                 <p>1992 hasta 2002</p>
             </div>
-            <div class="col-8 pt-2">
+            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 pt-2">
                 <h5 class="colorOrg">Universidad Tecnológica Nacional - Facultad Regional Tucumán</h5>
                 <h6 class="center">Rivadavia 1050, San Miguel de Tucumán - Argentina</h6>
                 <p><strong>Título:</strong> Ingeniero en Sistemas de Información</p>
             </div>
-            <div class="col-1 pt-2">
+            <div class="col-xs-12 col-sm-1 col-md-1 col-lg-1 pt-2">
                 <!-- Button trigger modal - Boton para abrir formulario Educacion -->
                 <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalEducacion">
                     <i class="fa-solid fa-pen-to-square fa-xl"></i>
@@ -44,15 +44,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-3 pt-2">
+            <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 pt-2">
                 <p>1987 hasta 1991</p>
             </div>
-            <div class="col-8 pt-2">
+            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 pt-2">
                 <h5 class="colorOrg">Instituto San Marcos</h5>
                 <h6 class="center">Muñecas 385, San Miguel de Tucumán - Argentina</h6>
                 <p><strong>Título:</strong> Bachiller</p>
             </div>
-            <div class="col-1 pt-2">
+            <div class="col-xs-12 col-sm-1 col-md-1 col-lg-1 pt-2">
                 <!-- Button trigger modal - Boton para abrir formulario Educacion -->
                 <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalEducacion">
                     <i class="fa-solid fa-pen-to-square fa-xl"></i>
@@ -64,3 +64,4 @@
         </div>
     </div>
 </section>
+<app-modal-educacion></app-modal-educacion>
