--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -10,7 +10,7 @@
     </button>
     <!-- NavBar -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav me-auto mb-1 mb-lg-0">
             <li class="nav-item active">
                 <a class="nav-link" href="https://codepen.io/richarddf" target="_blank">
                     <i class="fa-brands fa-codepen fa-xl text-white"></i>
@@ -47,3 +47,4 @@
         </ul>
     </div>
 </nav>
+<app-modal-login></app-modal-login>
