--- a/src/app/componentes/banner/banner.component.html
+++ b/src/app/componentes/banner/banner.component.html
@@ -1,4 +1,5 @@
 <!-- Banner -->
-<section class="banner container-fluid">
+<section class="banner img-fluid">
     <h5 class="tituloBanner">Villa Nougues</h5>
+    <img src="../../../assets/img/villanougues1.jpg" alt="Villa Nougues" class="img-fluid mt-2">
 </section>
