--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -6,15 +6,15 @@
     
     <div class="container">
         <div class="row">
-            <div class="col-3 pt-2">
+            <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 pt-2">
                 <p>Marzo de 2015 hasta la actualidad</p>
             </div>
-            <div class="col-8 pt-2">
+            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 pt-2">
                 <h5 class="colorOrg">Centro de Formación Profesional N° 1</h5>
                 <h6 class="center">Ayacucho 848 - San Miguel de Tucumán, Argentina</h6>
                 <p><strong>Posición:</strong> Docente</p>
             </div>
-            <div class="col-1 pt-2">
+            <div class="col-xs-12 col-sm-1 col-md-1 col-lg-1 pt-2">
                 <!-- Button trigger modal - Boton para abrir formulario Experiencia -->
                 <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalExperiencia">
                     <i class="fa-solid fa-pen-to-square fa-xl"></i>
@@ -25,15 +25,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-3 pt-2">
+            <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 pt-2">
                 <p>Diciembre de 2006 hasta la actualidad</p>
             </div>
-            <div class="col-8 pt-2">
+            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 pt-2">
                 <h5 class="colorOrg">Junta de Clasificación Técnica, Agrotécnica y Ed. No Formal</h5>
                 <h6 class="center">Calle Córdoba 757 - 1° Piso - San Miguel de Tucumán, Argentina</h6>
                 <p><strong>Posición:</strong> Referente Informatico</p>
             </div>
-            <div class="col-1 pt-2">
+            <div class="col-xs-12 col-sm-1 col-md-1 col-lg-1 pt-2">
                 <!-- Button trigger modal - Boton para abrir formulario Experiencia -->
                 <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalExperiencia">
                     <i class="fa-solid fa-pen-to-square fa-xl"></i>
@@ -44,15 +44,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-3 pt-2">
+            <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 pt-2">
                 <p>Febrero de 1998 hasta Septiembre de 2001</p>
             </div>
-            <div class="col-8 pt-2">
+            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 pt-2">
                 <h5 class="colorOrg">Estudio Contable Auad</h5>
                 <h6 class="center">Av. Mitre 686 - 1º Piso - San Miguel de Tucumán, Argentina</h6>
                 <p><strong>Posición:</strong> Administrativo Contable</p>
             </div>
-            <div class="col-1 pt-2">
+            <div class="col-xs-12 col-sm-1 col-md-1 col-lg-1 pt-2">
                 <!-- Button trigger modal - Boton para abrir formulario Experiencia -->
                 <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalExperiencia">
                     <i class="fa-solid fa-pen-to-square fa-xl"></i>
@@ -64,3 +64,4 @@
         </div>
     </div>
 </section>
+<app-modal-experiencia></app-modal-experiencia>
