--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="fixed-bottom piePagina colorFondo d-md-flex">
+<footer class="piePagina colorFondo d-md-flex w-100 mt-2">
     <div class="container-fluid text-white">
         <p>Todos los derechos reservados. Richard Díaz Flores</p>
     </div>
