Modales en carpeta aparte y creacion del Json de datos

--- a/src/app/componentes/habilidades/habilidades.component.html
+++ b/src/app/componentes/habilidades/habilidades.component.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-4 cuadro mx-auto shadow text-center">
                 <!-- Button trigger modal - Boton para abrir formulario Habilidades -->
-                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidades">
+                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidad">
                     <i class="fa-solid fa-pen-to-square fa-lg"></i>
                 </button>
                 <button type="button" class="btn colorBoton">
@@ -22,7 +22,7 @@
             </div>
             <div class="col-4 cuadro mx-auto shadow text-center">
                 <!-- Button trigger modal - Boton para abrir formulario Educacion -->
-                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidades">
+                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidad">
                     <i class="fa-solid fa-pen-to-square fa-lg"></i>
                 </button>
                 <button type="button" class="btn colorBoton">
@@ -37,7 +37,7 @@
             </div>
             <div class="col-4 cuadro mx-auto shadow text-center">
                 <!-- Button trigger modal - Boton para abrir formulario Educacion -->
-                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidades">
+                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidad">
                     <i class="fa-solid fa-pen-to-square fa-lg"></i>
                 </button>
                 <button type="button" class="btn colorBoton">
@@ -55,7 +55,7 @@
         <div class="row">
             <div class="col-4 cuadro mx-auto shadow text-center">
                 <!-- Button trigger modal - Boton para abrir formulario Educacion -->
-                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidades">
+                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidad">
                     <i class="fa-solid fa-pen-to-square fa-lg"></i>
                 </button>
                 <button type="button" class="btn colorBoton">
@@ -70,7 +70,7 @@
             </div>
             <div class="col-4 cuadro mx-auto shadow text-center">
                 <!-- Button trigger modal - Boton para abrir formulario Educacion -->
-                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidades">
+                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidad">
                     <i class="fa-solid fa-pen-to-square fa-lg"></i>
                 </button>
                 <button type="button" class="btn colorBoton">
@@ -85,7 +85,7 @@
             </div>
             <div class="col-4 cuadro mx-auto shadow text-center">
                 <!-- Button trigger modal - Boton para abrir formulario Educacion -->
-                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidades">
+                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidad">
                     <i class="fa-solid fa-pen-to-square fa-lg"></i>
                 </button>
                 <button type="button" class="btn colorBoton">
@@ -103,7 +103,7 @@
         <div class="row">
             <div class="col-4 cuadro mx-auto shadow text-center">
                 <!-- Button trigger modal - Boton para abrir formulario Educacion -->
-                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidades">
+                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidad">
                     <i class="fa-solid fa-pen-to-square fa-lg"></i>
                 </button>
                 <button type="button" class="btn colorBoton">
@@ -118,7 +118,7 @@
             </div>
             <div class="col-4 cuadro mx-auto shadow text-center">
                 <!-- Button trigger modal - Boton para abrir formulario Educacion -->
-                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidades">
+                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidad">
                     <i class="fa-solid fa-pen-to-square fa-lg"></i>
                 </button>
                 <button type="button" class="btn colorBoton">
@@ -133,7 +133,7 @@
             </div>
             <div class="col-4 cuadro mx-auto shadow text-center">
                 <!-- Button trigger modal - Boton para abrir formulario Educacion -->
-                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidades">
+                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalHabilidad">
                     <i class="fa-solid fa-pen-to-square fa-lg"></i>
                 </button>
                 <button type="button" class="btn colorBoton">
@@ -149,4 +149,4 @@
         </div>
     </div>
 </section>
-<app-modal-habilidades></app-modal-habilidades>
+<app-modal-habilidad></app-modal-habilidad>
