--- a/src/app/modales/modal-acercade/modal-acercade.component.html
+++ b/src/app/modales/modal-acercade/modal-acercade.component.html
@@ -18,7 +18,7 @@
                     </div>
                     <div class="col-12">
                         <label for="inputUrl" class="form-label">URL</label>
-                        <input type="text" class="form-control" id="inputUrl" placeholder="http://..." required>
+                        <input type="url" class="form-control" id="inputUrl" placeholder="http://..." required>
                     </div>
                     <div class="col-12">
                         <label for="inputDescripcion" class="form-label">Descripción</label>
