--- a/src/app/modales/modal-habilidad/modal-habilidad.component.html
+++ b/src/app/modales/modal-habilidad/modal-habilidad.component.html
@@ -1,5 +1,5 @@
 <!-- Formulario Modal Habilidades -->
-<div class="modal fade" id="modalHabilidades" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade" id="modalHabilidad" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content rounded-4 shadow">
             <div class="modal-header p-5 pb-4 border-bottom-0">
@@ -14,7 +14,7 @@
                     </div> -->
                     <div class="col-12">
                         <label for="inputUrl" class="form-label">URL Imágen</label>
-                        <input type="text" class="form-control" id="inputUrl" placeholder="http://..." required>
+                        <input type="url" class="form-control" id="inputUrl" placeholder="http://..." required>
                     </div>
                     <div class="col-md-3">
                         <label for="inputPorcentaje" class="form-label">Porcentaje</label>
