modificación de periodo separado en dos campos fechas

--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -7,7 +7,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 pt-2">
-                <p>Marzo de 2015 hasta la actualidad</p>
+                <p>Desde <strong>15-03-2015</strong> hasta <strong>31-12-2022</strong></p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 pt-2">
                 <h5 class="colorOrg">Centro de Formación Profesional N° 1</h5>
@@ -27,7 +27,7 @@
         <hr>
         <div class="row">
             <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 pt-2">
-                <p>Diciembre de 2006 hasta la actualidad</p>
+                <p>Desde <strong>01-12-2006</strong> hasta <strong>31-12-2022</strong></p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 pt-2">
                 <h5 class="colorOrg">Junta de Clasificación Técnica, Agrotécnica y Ed. No Formal</h5>
@@ -47,7 +47,7 @@
         <hr>
         <div class="row">
             <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 pt-2">
-                <p>Febrero de 1998 hasta Septiembre de 2001</p>
+                <p>Desde <strong>01-02-1998</strong> hasta <strong>30-09-2001</strong></p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 pt-2">
                 <h5 class="colorOrg">Estudio Contable Auad</h5>
