--- a/src/app/modales/modal-experiencia/modal-experiencia.component.html
+++ b/src/app/modales/modal-experiencia/modal-experiencia.component.html
@@ -16,13 +16,17 @@
                         <label for="inputAddress" class="form-label">Dirección</label>
                         <input type="text" class="form-control" id="inputAddress" placeholder="Calle, Avda ..." required>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-10">
                         <label for="inputPosicion" class="form-label">Posición</label>
                         <input type="text" class="form-control" id="inputPosicion" placeholder="Encargado, administrativo" required>
                     </div>
-                    <div class="col-12">
-                        <label for="inputPeriodo" class="form-label">Periodo</label>
-                        <input type="text" class="form-control" id="inputPeriodo" placeholder="Periodo expresado literalmente" required>
+                    <div class="col-4">
+                        <label for="inputPeriodo" class="form-label">Fecha Inicio</label>
+                        <input type="date" class="form-control" id="inputFecInicio" placeholder="dd/mm/aaaa" required>
+                    </div>
+                    <div class="col-4">
+                        <label for="inputPeriodo" class="form-label">Fecha Final</label>
+                        <input type="date" class="form-control" id="inputFecFinal" placeholder="dd/mm/aaaa" required>
                     </div>
                     <div class="col-md-12 d-grid gap-2 d-md-flex justify-content-md-end">
                         <button type="submit" class="btn btn-md rounded-3 btn-outline-success">Grabar</button>
