--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -7,7 +7,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 pt-2">
-                <p>2010 hasta 2014</p>
+                <p>Desde <strong>01-03-2010</strong> hasta <strong>31-12-2014</strong></p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 pt-2">
                 <h5 class="colorOrg">Universidad Nacional de Catamarca</h5>
@@ -27,7 +27,7 @@
         <hr>
         <div class="row">
             <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 pt-2">
-                <p>1992 hasta 2002</p>
+                <p>Desde <strong>01-02-1992</strong> hasta <strong>10-05-2002</strong></p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 pt-2">
                 <h5 class="colorOrg">Universidad Tecnológica Nacional - Facultad Regional Tucumán</h5>
@@ -47,7 +47,7 @@
         <hr>
         <div class="row">
             <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 pt-2">
-                <p>1987 hasta 1991</p>
+                <p>Desde <strong>01-03-1987</strong> hasta <strong>30-11-1991</strong></p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 pt-2">
                 <h5 class="colorOrg">Instituto San Marcos</h5>
